Fixes first paragraph in list items adding extra spaces.

--- a/src/documents/styles.css.less
+++ b/src/documents/styles.css.less
@@ -151,6 +151,14 @@ article {
       font-weight: bold;
     }
 
+    ul {
+      li {
+        p:first-of-type {
+          margin: 0;
+        }
+      }
+    }
+
     p.read-more {
       a:after {
         content: ' ➤';
